# launch-control

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
src/agent_framework/audio/: receiver.py  transcription.py
src/agent_framework/core/: base_agent.py
src/launch_control/: cli.py
src/launch_control/agents/: deployment_agent.py
src/launch_control/config/: settings.py
